change: Largo to Alto

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <input id="width" class="number" type="text" />
         </div>
         <div class="measure">
-          <label for="height">Largo: </label>
+          <label for="height">Alto: </label>
           <input id="height" class="number" type="text" />
         </div>
         <div class="measure">
