--- a/index.html
+++ b/index.html
@@ -22,8 +22,18 @@
           <input id="bodies" class="number" type="number" min="2" max="3" />
         </div>
         <div class="buttons">
-          <input type="button" value="Agregar" onclick="generate()" />
-          <input type="button" value="Imprimir" onclick="window.print()" />
+          <input
+            class="button"
+            type="button"
+            value="Agregar"
+            onclick="generate()"
+          />
+          <input
+            class="button"
+            type="button"
+            value="Imprimir"
+            onclick="window.print()"
+          />
         </div>
       </div>
 
