Add favicon and refactor the table

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Calculadora Ventanero</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -36,18 +37,25 @@
           />
         </div>
       </div>
-
-      <div id="results" class="results" hidden>
+      
+      <hr />
+      <div id="results" class="results">
         <table>
-          <tr>
-            <th>Tamaño</th>
-            <th>Cuerpos</th>
-            <th>Cabezal / Alfeizar</th>
-            <th>Llavin / Enganche</th>
-            <th>Rieles</th>
-            <th>Laterales</th>
-            <th>Vidrio</th>
-          </tr>
+          <caption>
+            <h2>Hoja de cortes</h2>
+          </caption>
+          <thead colspan="7">
+            <tr>
+              <th scope="col">Tamaño</th>
+              <th scope="col">Cuerpos</th>
+              <th scope="col">Cabezal / Alfeizar</th>
+              <th scope="col">Llavin / Enganche</th>
+              <th scope="col">Rieles</th>
+              <th scope="col">Laterales</th>
+              <th scope="col">Vidrio</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
         </table>
       </div>
     </div>
