Add extra columns row cout and actions for delete row

--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
           <caption>
             <h2>Hoja de cortes</h2>
           </caption>
-          <thead colspan="7">
+          <thead colspan="9">
             <tr>
+              <th scope="col"></th>
               <th scope="col">Tamaño</th>
               <th scope="col">Cuerpos</th>
               <th scope="col">Cabezal / Alfeizar</th>
@@ -67,6 +68,7 @@
               <th scope="col">Rieles</th>
               <th scope="col">Laterales</th>
               <th scope="col">Vidrio</th>
+              <th class="no-print" scope="col"></th>
             </tr>
           </thead>
           <tbody></tbody>
